fixed some bugs

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
     <div id="main-menu">
       <ul>
         <li>
-          <a href="{% url home %}" class="{% block menu_home %}{% endblock %}">
+          <a href="{% url info_index %}" class="{% block menu_home %}{% endblock %}">
             Accueil
           </a>
         </li>
