--- a/templates/order/order_details_secretary.html
+++ b/templates/order/order_details_secretary.html
@@ -9,23 +9,24 @@
     <h2>Détail commande {{ order.provider }} du {{ order.date_created|date }}</h2>
   </div>
   <ul>
-    {% if order.number %}
-      {% if user|is_secretary or user|is_super_secretary %}
-        <li>Commande n° 
+    <li>Commande équipe {{ order.team }}</li>
+    <li>Statut: {{ order.get_status_display }}</li>
+    
+    {% if user|is_secretary or user|is_super_secretary or user|is_super_validator %}
+      {% if order.status > 2 %}
+        <li><strong>Commande n°</strong>
           <input type="text"
             id="order_number"
             url="{% url set_order_number order.id %}"
-            value="{{ order.number }}"
-            style="float:none;display:inline"
+            value="{{ order.number|default:"" }}"
+            style="float:none;display:inline;padding:1px;"
           />
         </li>
-      {% else %}
-        <li>Commande n°{{ order.number }}</li>
       {% endif %}
-      
-    {% endif %}
-    <li>Commande équipe {{ order.team }}</li>
-    <li>Statut: {{ order.get_status_display }}</li>
+    {% else %}{% if order.number %}
+      <li>Commande n°{{ order.number }}</li>
+    {% endif %}{% endif %}
+    
     {% if not user|is_secretary and not order.number and not order.provider.is_local %}
       <li><strong>Budget à imputer:</strong>
         <select id="select-budget" url="{% url order_budget order.id %}">
@@ -94,6 +95,16 @@
     Enregistrer les modifications
   </a>
   <a href="{% url tab_orders %}" class="back">Retour aux commandes</a>
+  
+  {% if order.status == 2 and not user|is_secretary %}
+    <a href="{% url set_next_status order.id %}" class="next-status save-changes">
+      {% if order.budget.budget_type == 0 %}
+        Pour saisie XLAB
+      {% else %}
+        Pour saisie SIFAC
+      {% endif %}
+    </a>
+  {% endif %}
   
   <div style="float:right">
     <a href="{% url add_debit order.id %}?next={{order.get_absolute_url}}" class="plus">Frais annexes</a>
