--- a/templates/tab_orders_secretary.html
+++ b/templates/tab_orders_secretary.html
@@ -40,15 +40,7 @@
             <td>
               <a href="{{ order.get_absolute_url }}?next=tab_orders" class="pencil">Voir détail</a>
               {% if order.budget %}
-                {% if order.status == 2 and not user|is_secretary %}
-                  <a href="{% url set_next_status order.id %}" class="next-status">
-                    {% if order.budget.budget_type == 0 %}
-                      Pour saisie XLAB
-                    {% else %}
-                      Pour saisie SIFAC
-                    {% endif %}
-                  </a>
-                {% else %}{% if order.status == 3 %}
+                {% if order.status == 3 %}
                   <a href="{% url set_next_status order.id %}" class="next-status setOrderNb">
                     {% if order.budget.budget_type == 0 %}
                       Saisie n°XLAB
@@ -60,7 +52,7 @@
                   <a href="{% url set_next_status order.id %}" class="next-status setDeliveryDate">
                     Commande réceptionnée
                   </a>
-                {% endif %}{% endif %}{% endif %}
+                {% endif %}{% endif %}
               {% endif %}
             </td>
           </tr>
