--- a/templates/tab_orders_secretary.html
+++ b/templates/tab_orders_secretary.html
@@ -38,21 +38,25 @@
             <td>{{ order.number|default:"" }}</td>
             <td>{{ order.last_change|date }}</td>
             <td>
-              <a href="{{ order.get_absolute_url }}?next=tab_orders" class="pencil">Voir détail</a>
               {% if order.budget %}
                 {% if order.status == 3 %}
-                  <a href="{% url set_next_status order.id %}" class="next-status setOrderNb">
+                  <a href="{{ order.get_absolute_url }}?next=tab_orders" class="next-status">
                     {% if order.budget.budget_type == 0 %}
-                      Saisie n°XLAB
+                      Saisie XLAB
                     {% else %}
-                      Saisie n°SIFAC
+                      Saisie SIFAC
                     {% endif %}
                   </a>
-                {% else %}{% if order.status == 4 %}
-                  <a href="{% url set_next_status order.id %}" class="next-status setDeliveryDate">
-                    Commande réceptionnée
-                  </a>
-                {% endif %}{% endif %}
+                {% else %}
+                  <a href="{{ order.get_absolute_url }}?next=tab_orders" class="pencil">Voir détail</a>
+                  {% if order.status == 4 %}
+                    <a href="{% url set_next_status order.id %}" class="next-status setDeliveryDate">
+                      Commande réceptionnée
+                    </a>
+                  {% endif %}
+                {% endif %}
+              {% else %}
+                <a href="{{ order.get_absolute_url }}?next=tab_orders" class="pencil">Voir détail</a>
               {% endif %}
             </td>
           </tr>
