--- a/templates/tab_orders_secretary.html
+++ b/templates/tab_orders_secretary.html
@@ -40,13 +40,11 @@
             <td>
               {% if order.budget %}
                 {% if order.status == 3 %}
-                  <a href="{{ order.get_absolute_url }}?next=tab_orders" class="next-status">
-                    {% if order.budget.budget_type == 0 %}
-                      Saisie XLAB
-                    {% else %}
-                      Saisie SIFAC
-                    {% endif %}
-                  </a>
+                  {% if order.budget.budget_type == 0 %}
+                    <a href="{{ order.get_absolute_url }}?next=tab_orders" class="next-status xlab">Saisie XLAB</a>
+                  {% else %}
+                    <a href="{{ order.get_absolute_url }}?next=tab_orders" class="next-status sifac">Saisie SIFAC</a>
+                  {% endif %}
                 {% else %}
                   <a href="{{ order.get_absolute_url }}?next=tab_orders" class="pencil">Voir détail</a>
                   {% if order.status == 4 %}
