changed login html page title

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Gestion des commandes - Identification</title>
+    <title>Commandes LBCMCP - login</title>
     <link rel="stylesheet" href="{{ MEDIA_URL }}css/login.css" type="text/css" />
     <link rel="stylesheet" href="{{ MEDIA_URL }}css/form.css" type="text/css" />
     <link rel="stylesheet" href="{{ MEDIA_URL }}css/redmond/jquery-ui-1.8.12.custom.css" type="text/css" />
