Fixed some bugs

--- a/templates/order/orderitem_detail.html
+++ b/templates/order/orderitem_detail.html
@@ -33,18 +33,10 @@
   </form>
 </div>
 
-<div id="sendChanges" class="dialog" title="Avertir les responsables de ce produit">
-  Vous apportez des changements à un produit de cette commande.
-  <br /><br />
-  
-  Si ces changements sont permanents (ex: nouveau prix), un email 
-  d'information peut être envoyé automatiquement aux responsables de 
-  ce produit pour qu'ils répercutent ces changements dans la base de 
-  données. Dans ce cas, veuillez cliquer sur "Envoyer".
-  <br /><br />
-  
-  Autrement, si ces changements sont spécifiques à cette commande, 
-  cliquez sur "Ne pas envoyer".
+<div id="sendChanges" class="dialog" title="Modification de prix">
+  Vous apportez une modification au prix d'un ou plusieurs produits.
+  Cette modification va devenir permanente dans la base de données.
+  S'il s'agît d'une remise ponctuelle, merci d'utiliser le bouton "Remise".
 </div>
 
 {% endblock %}
