--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -30,6 +30,16 @@
           <td>Fournisseur d'origine:</td>
           <td>{{ filter_form.origin }}</td>
         </tr>
+        <tr>
+          <td>Nomenclature:</td>
+          <td>{{ filter_form.nomenclature }}</td>
+          <td width="5%"></td>
+          <td>Type:</td>
+          <td>{{ filter_form.category }}</td>
+          <td width="5%"></td>
+          <td>Sous-Type:</td>
+          <td>{{ filter_form.sub_category }}</td>
+        </tr>
       </table>
       <div class="cleaner"></div>
       <button type="submit" class="all">Chercher</button>
