Be less explicit in the headers on an order detail page

--- a/templates/issues/index.html
+++ b/templates/issues/index.html
@@ -26,6 +26,11 @@
 {% block content %}
 <div id="content" style="min-height:0">
   <div id="content_header"><h2>Bugs et améliorations</h2></div>
+    <p>
+      Lors de l'ajout d'un bug ou amélioration, merci de préciser l'adresse URL (http://lbcmcp-orders.ups-tlse.fr/...)
+      dans la description pour faciliter la résolution du problème.
+    </p>
+  
     <table class="list">
       <thead>
         <th>#</th>
