--- a/templates/order/order_details_secretary.html
+++ b/templates/order/order_details_secretary.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div id="content" style="min-height:0" class="order">
   <div id="content_header">
-    <h2>Détail commande {{ order.provider }} du {{ order.date_created|date }}</h2>
+    <h2>{{ order.provider }} - {{ order.date_created|date }}</h2>
   </div>
   <ul>
     <li>Commande équipe {{ order.team }}</li>
