Add order number to budgetline edit form

--- a/templates/budget/budgetline_edit.html
+++ b/templates/budget/budgetline_edit.html
@@ -71,6 +71,10 @@
         {% with form.quantity as field %}
             {% include "form_snippet.html"%}
         {% endwith %}
+        
+        {% with form.number as field %}
+            {% include "form_snippet.html"%}
+        {% endwith %}
       </fieldset>
       <div class="cleaner"></div>
       
