--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,11 @@
             {% if user|in_team_secretary %}Commandes à saisir{% else %}Commandes en cours{% endif %}
           </a>
         </li>
+        <li>
+          <a href="{% url tab_services %}" class="{% block menu_services %}{% endblock %}">
+            Services
+          </a>
+        </li>
         {% if user|is_super_secretary or user|is_validator or user|is_super_validator %}
           <li>
             <a href="{% url budgets %}" class="{% block menu_budgets %}{% endblock %}">
