--- a/templates/tab_services.html
+++ b/templates/tab_services.html
@@ -1,7 +1,8 @@
 {% extends "main_custom.html" %}
 
-{% block content %}
+{% block menu_services %}selected{% endblock %}
 
+{% block content %}
 <div id="content" style="min-height:0">
   <div id="content_header"><h2>Services</h2></div>
   {# {% extends "base_main.html" %} #}
