Fixed bugs and added preferences feature

--- a/templates/base_history.html
+++ b/templates/base_history.html
@@ -1,7 +1,7 @@
 {% extends "base_main.html" %}
 {% load filters %}
 
-{% block tab_history %}active{% endblock %}
+{% block menu_history %}active{% endblock %}
 
 {% block nav_secondary %}
 <ul id="subnav">
