--- a/templates/tab_services.html
+++ b/templates/tab_services.html
@@ -1,22 +1,19 @@
-{% extends "main_custom.html" %}
+{% extends "base_main.html" %}
 
-{% block menu_services %}selected{% endblock %}
+{% block menu_services %}active{% endblock %}
+
+{% block header %}
+  <h1>Services</h1>
+{% endblock %}
 
 {% block content %}
-<div id="content" style="min-height:0">
-  <div id="content_header"><h2>Services</h2></div>
-  {# {% extends "base_main.html" %} #}
-  {# {% block menu_services %}active{% endblock %} #}
-  {#  #}
-  {# {% block content %} #}
   <form action="{% url tab_services %}" method="POST">
-    {# <h3>Services</h3> #}
     <fieldset>
       {% for field in form %}
         {% include "form_snippet.html" %}
       {% endfor %}
     </fieldset>
-  
+    
     <button type="submit" class="check">Commander</button>
   </form>
 </div>
