--- a/templates/history/item.html
+++ b/templates/history/item.html
@@ -5,7 +5,7 @@
 
 {% block header %}
   <h1>Historique commandes</h1>
-  <h2>Détail commande {{ history.provider }} réceptionnée le {{ history.date_created|date }}</h2>
+  <h2>Détail commande {{ history.provider }} réceptionnée le {{ history.date_delivered|date }}</h2>
 {% endblock %}
 
 {% block content %}
