--- a/templates/history/orders.html
+++ b/templates/history/orders.html
@@ -15,7 +15,7 @@
     <h4>Recherche de commandes réceptionnées</h4>
 </div>
 <div class="bar_content">
-  <form action="{% url history %}" method="POST">{% csrf_token %}
+  <form action="{% url history %}" method="GET">{% csrf_token %}
     <strong>Chercher les commandes qui correspondent à {{ filter_form.connector }} conditions suivantes:</strong>
     <div class="cleaner"></div>
     <table>
@@ -32,14 +32,14 @@
         <td>{{ filter_form.provider }}</td>
         <td width="5%"></td>
         <td>Fournisseur d'origine:</td>
-        <td>{{ filter_form.origin }}</td>
+        <td>{{ filter_form.items__origin }}</td>
       </tr>
       <tr>
         <td>Produit:</td>
-        <td>{{ filter_form.name }}</td>
+        <td>{{ filter_form.items__name }}</td>
         <td width="5%"></td>
         <td>Référence:</td>
-        <td>{{ filter_form.reference }}</td>
+        <td>{{ filter_form.items__reference }}</td>
       </tr>
     </table>
     <div class="cleaner"></div>
@@ -53,39 +53,76 @@
 
 {% if history.object_list %}
   <h2>Liste des commandes réceptionnées - Page {{ history.number }} sur {{ history.paginator.num_pages }}.</h2>
+  
   {% pagination history %}
-  <table class="list">
-    <thead>
-      <th>Date</th>
-      <th>Equipe</th>
-      <th>Fournisseur</th>
-      <th>Prix</th>
-      {% if user|is_validator or user|is_super_validator or user|is_secretary or user|is_super_secretary %}
-        <th>Budget</th>
-      {% endif %}
-      <th>Action</th>
-    </thead>
-
-    <tbody>
-      {% for item in history.object_list %}
-        <tr class="{% cycle 'even' 'odd' %}">
-          <td>{{ item.date_delivered|date }}</td>
-          <td>{{ item.team }}</td>
-          <td>{{ item.provider }}</td>
-          <td>{{ item.price }}</td>
-          {% if user|is_validator or user|is_super_validator or user|is_secretary or user|is_super_secretary %}
-            <td>{{ item.budget }}</td>
-          {% endif %}
-          <td>
-            <a href="{{ item.get_absolute_url }}" class="zoomin">
-              Voir détail
-            </a>
-          </td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-
+  {% if display == "by_order" %}
+    <table class="list">
+      <thead>
+        <th>Date</th>
+        <th>Equipe</th>
+        <th>Fournisseur</th>
+        <th>Prix</th>
+        {% if user|is_validator or user|is_super_validator or user|is_secretary or user|is_super_secretary %}
+          <th>Budget</th>
+        {% endif %}
+        <th>Action</th>
+      </thead>
+    
+      <tbody>
+        {% for order in history.object_list %}
+          <tr class="{% cycle 'even' 'odd' %}">
+            <td>{{ order.date_delivered|date }}</td>
+            <td>{{ order.team }}</td>
+            <td>{{ order.provider }}</td>
+            <td>{{ order.price }}</td>
+            {% if user|is_validator or user|is_super_validator or user|is_secretary or user|is_super_secretary %}
+              <td>{{ order.budget }}</td>
+            {% endif %}
+            <td>
+              <a href="{{ order.get_absolute_url }}" class="zoomin">Voir détail</a>
+            </td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  {% else %}{% if display == "by_product" %}
+    <table class="list">
+      <thead>
+        <th>Date réception</th>
+        <th>Equipe</th>
+        <th>Utilisateur</th>
+        <th>Fournisseur</th>
+        <th>Produit</th>
+        <th>Conditionnement</th>
+        <th>Référence</th>
+        <th>N° Offre</th>
+        <th>Prix unitaire</th>
+        <th>Quantité</th>
+        <th>Prix total</th>
+        <th>Montant cmde</th>
+      </thead>
+      <tbody>
+        {% for order in history.object_list %}
+          {% for product in order.items.all %}
+            <tr>
+              <td>{{ order.date_delivered|date }}</td>
+              <td>{{ order.team }}</td>
+              <td>{{ product.get_fullname }}</td>
+              <td>{{ order.provider }}{% if product.origin %} - {{ product.origin }}{% endif %}</td>
+              <td>{{ product.name }}</td>
+              <td>{{ product.packaging|default:"" }}</td>
+              <td>{{ product.reference|default:"" }}</td>
+              <td>{{ product.offer_nb|default:"" }}</td>
+              <td>{{ product.price }} €</td>
+              <td>{{ product.quantity }}</td>
+              <td>{{ product.total_price }} €</td>
+              <td>{{ order.price }} €</td>
+            </tr>
+          {% endfor %}
+        {% endfor %}
+      </tbody>
+    </table>
+  {% endif %}{% endif %}
   {% pagination history %}
 {% else %}
   <h2>Liste des commandes réceptionnées</h2>
