--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,30 +1,20 @@
-{# PAGE ACCUEIL #}
-
-{% extends "main_custom.html" %}
+{% extends "base_main.html" %}
 {% load filters %}
 
-{% block menu_home %}selected{% endblock %}
+{% block menu_home %}active{% endblock %}
+
+{% block header %}
+  <h1>Informations</h1>
+{% endblock %}
 
 {% block content %}
-<div id="content" style="min-height:0">
-  <div id="content_header"><h2>Infos</h2></div>
-  <div style="float:left;width:70%;min-height:400px;border-right:1px solid #eee;overflow:auto;">
-    <table>
-      <tr>
-        <td class="expired" width="50px" height="25px" style="border:1px solid #ccc"></td>
-        <td>Date d'expiration dépassée</td>
-        <td width="50px"></td>
-        <td class="soon_expired" width="50px" height="25px" style="border:1px solid #ffd3c4"></td>
-        <td>Date d'expiration à moins de 10jours</td>
-      </tr>
-    </table>
-    
+  <div id="left">
     <table class="list">
       <thead>
-        <th width="60px">Date</th>
-        <th width="60px">Expiration</th>
-        <th width="100%">Information</th>
-        <th width="60px"></th>
+        <th>Date</th>
+        <th>Expiration</th>
+        <th>Information</th>
+        <th></th>
       </thead>
       <tbody>
         {% for info in infos %}
@@ -40,21 +30,24 @@
             <td>{{ info.text|safe }}</td>
             <td>
               <a href="{% url info_delete info.id %}" class="trash no-text"></a>
-              {# <a href="{% url info_edit info.id %}" class="pencil">Editer</a> #}
             </td>
           </tr>
         {% endfor %}
       </tbody>
     </table>
   </div>
-  <div style="float:left;width:29%">
-    <form action="{% url info_index %}" method="POST">{% csrf_token %}
-      {% for field in info_form %}
-        {% include "form_snippet.html"%}
-      {% endfor %}
-      <button type="submit" class="check button">Valider</button>
-    </form>
+  
+  <div id="right">
+    <h5>Ajouter une info</h5>
+    <div class="right_wrapper">
+      <form action="{% url info_index %}" method="POST">{% csrf_token %}
+        {% for field in info_form %}
+          {% include "form_snippet.html"%}
+        {% endfor %}
+        
+        <button type="submit" class="check">Valider</button>
+      </form>
+    </div>
   </div>
-  <div class="cleaner"></div>
-</div>
+
 {% endblock %}
