--- a/templates/issues/index.html
+++ b/templates/issues/index.html
@@ -1,60 +1,51 @@
-{# PAGE BUGS #}
-
-{% extends "main_custom.html" %}
+{% extends "base_main.html" %}
 {% load filters %}
 
-{% block menu_bugs %}selected{% endblock %}
+{% block menu_bugs %}active{% endblock %}
 
-{% block buttons %}
-  <div class="btn_wrapper">
-    <a href="{% url issue_index %}?fixed=True" class="btn_medium">
-      <img src="{{ MEDIA_URL }}img/icons/flag_green.png" />Voir résolus
-    </a>
-  </div>
-  <div class="btn_wrapper">
-    <a href="{% url issue_index %}" class="btn_medium">
-      <img src="{{ MEDIA_URL }}img/icons/flag_red.png" />Voir non résolus
-    </a>
-  </div>
-  <div class="btn_wrapper">
-    <a href="{% url issue_new %}" class="btn_small">
-      <img src="{{ MEDIA_URL }}img/icons/bug_add.png" />Ajouter
-    </a>
-  </div>
+{% block header %}
+<div class="btn_wrapper">
+  <a href="{% url issue_index %}?fixed=True" class="btn_medium">
+    <img src="{{ MEDIA_URL }}img/icons/flag_green.png" />Voir résolus
+  </a>
+</div>
+<div class="btn_wrapper">
+  <a href="{% url issue_index %}" class="btn_medium">
+    <img src="{{ MEDIA_URL }}img/icons/flag_red.png" />Voir non résolus
+  </a>
+</div>
+<div class="btn_wrapper">
+  <a href="{% url issue_new %}" class="btn_small">
+    <img src="{{ MEDIA_URL }}img/icons/bug_add.png" />Ajouter
+  </a>
+</div>
+<h1>Bugs et améliorations</h1>
+<h2>Liste des bugs</h2>
 {% endblock %}
 
 {% block content %}
-<div id="content" style="min-height:0">
-  <div id="content_header"><h2>Bugs et améliorations</h2></div>
-    <p>
-      Lors de l'ajout d'un bug ou amélioration, merci de préciser l'adresse URL (http://lbcmcp-orders.ups-tlse.fr/...)
-      dans la description pour faciliter la résolution du problème.
-    </p>
-  
-    <table class="list">
-      <thead>
-        <th>#</th>
-        <th>Titre</th>
-        <th>Type</th>
-        <th>Priorité</th>
-        <th>Statut</th>
-        <th>Date</th>
-      </thead>
-      <tbody>
-        {% for issue in issues %}
-          <tr class="{% cycle 'even' 'odd' %}">
-            <td>{{ issue.id }}</td>
-            <td>
-              <a href="{% url issue_item issue.id %}">{{ issue.title }}</a>
-            </td>
-            <td>{{ issue.get_issue_type_display }}</td>
-            <td>{{ issue.get_severity_display }}</td>
-            <td>{{ issue.get_status_display }}</td>
-            <td>{{ issue.date_created|date }}</td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
-</div>
+<table class="list">
+  <thead>
+    <th>#</th>
+    <th>Titre</th>
+    <th>Type</th>
+    <th>Priorité</th>
+    <th>Statut</th>
+    <th>Date</th>
+  </thead>
+  <tbody>
+    {% for issue in issues %}
+      <tr class="{% cycle 'even' 'odd' %}">
+        <td>{{ issue.id }}</td>
+        <td>
+          <a href="{% url issue_item issue.id %}">{{ issue.title }}</a>
+        </td>
+        <td>{{ issue.get_issue_type_display }}</td>
+        <td>{{ issue.get_severity_display }}</td>
+        <td>{{ issue.get_status_display }}</td>
+        <td>{{ issue.date_created|date }}</td>
+      </tr>
+    {% endfor %}
+  </tbody>
+</table>
 {% endblock %}
